# sunday

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  design.md  pyproject.toml  sangfor_stock_data.json  specs.md  task.md
configs/: agent.yaml  mcp_servers.yaml
configs/prompts/: system.md  verifier.md
scripts/: memory_consolidate.py  task_runner.py
skills/calendar/: SKILL.md  tools.py
skills/code/: SKILL.md  tools.py
skills/email/: SKILL.md  tools.py
skills/files/: SKILL.md  tools.py
skills/web_search/: SKILL.md  tools.py
src/sunday/: __init__.py  cli.py  config.py
src/sunday/agent/: executor.py  llm_client.py  loop.py  models.py  planner.py  simple.py  verifier.py
src/sunday/gateway/: __main__.py  protocol.py  server.py  session.py
src/sunday/memory/: context.py  janitor.py  manager.py
src/sunday/skills/: loader.py
tests/: conftest.py
tests/integration/: test_agent_loop.py  test_gateway_server.py  test_tool_pipeline.py
tests/unit/: test_cli.py  test_cli_gateway.py  test_cli_tool.py  test_config.py  test_context_builder.py  test_executor.py  test_mcp_client.py  test_memory_janitor.py  test_memory_manager.py  test_models.py  test_planner.py  test_project_structure.py  test_protocol.py  test_session_manager.py  test_simple_agent.py  test_skill_loader.py  test_skills_builtin.py  test_skills_calendar.py  test_skills_email.py  test_slash_commands.py  test_task_runner.py  test_tool_guard.py  test_tool_registry.py  test_tui_app.py  test_verifier.py  test_workspace.py
workspace/: AGENTS.md  MEMORY.md  SOUL.md  TOOLS.md  USER.md
(+11 files in other folders)
